--- a/Assessment Code.ipynb
+++ b/Assessment Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "id": "71ca9e00",
    "metadata": {},
    "outputs": [],
@@ -18,66 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 125,
    "id": "fbbf0a50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = transforms.Compose([transforms.Resize((32,32)),transforms.ToTensor()])"
+    "transform = transforms.Compose([transforms.Resize((512,512)),transforms.ToTensor()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 126,
    "id": "e369558b",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading https://thor.robots.ox.ac.uk/datasets/flowers-102/102flowers.tgz to data/flowers-102/102flowers.tgz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████| 344862509/344862509 [00:39<00:00, 8769396.53it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting data/flowers-102/102flowers.tgz to data/flowers-102\n",
-      "Downloading https://thor.robots.ox.ac.uk/datasets/flowers-102/imagelabels.mat to data/flowers-102/imagelabels.mat\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████| 502/502 [00:00<00:00, 39797.77it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading https://thor.robots.ox.ac.uk/datasets/flowers-102/setid.mat to data/flowers-102/setid.mat\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████| 14989/14989 [00:00<00:00, 3294300.08it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "training_data = datasets.Flowers102(root = 'data', split = 'train', download = True, transform = transform)\n",
     "testing_data = datasets.Flowers102(root = 'data', split = 'test', download = True, transform = transform)"
@@ -85,18 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 127,
    "id": "06cb2ec2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainingLoader = DataLoader(training_data, batch_size=64)\n",
-    "testingLoader = DataLoader(testing_data, batch_size=64)"
+    "trainingLoader = DataLoader(training_data, batch_size=16)\n",
+    "testingLoader = DataLoader(testing_data, batch_size=16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 191,
    "id": "45cea85d",
    "metadata": {},
    "outputs": [],
@@ -104,24 +60,29 @@
     "class NeuralNetwork(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.flatten = nn.Flatten()\n",
-    "        self.linear_relu_stack = nn.Sequential(\n",
-    "            nn.Linear(32*32*3,512),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(512,512),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Flatten(512,102),\n",
-    "        )\n",
+    "        self.conv1 = nn.Conv2d(3, 16, 5)\n",
+    "        self.pool = nn.MaxPool2d(3,3)\n",
+    "        self.conv2 = nn.Conv2d(16,32,5)\n",
+    "        self.conv3 = nn.Conv2d(32,128,5)\n",
+    "        self.fc1 = nn.Linear(512,256)\n",
+    "        self.fc2 = nn.Linear(256, 128)\n",
+    "        self.fc3 = nn.Linear(128, 102)\n",
+    "        \n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.flatten(x)\n",
-    "        logits = self.linear_relu_stack(x)\n",
-    "        return logits"
+    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "        x = self.pool(F.relu(self.conv2(x)))\n",
+    "        x = self.pool(F.relu(self.conv3(x)))\n",
+    "        x = torch.flatten(x,1)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        x = self.fc3(x)\n",
+    "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 192,
    "id": "74cd3fb2",
    "metadata": {},
    "outputs": [],
@@ -131,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 193,
    "id": "59816a54",
    "metadata": {},
    "outputs": [],
@@ -142,56 +103,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 196,
    "id": "c663b7a5",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1,     1] loss: 4.60264253616333\n",
+      "[1,     2] loss: 4.638364315032959\n",
+      "[1,     3] loss: 4.592617511749268\n",
+      "[1,     4] loss: 4.644452095031738\n",
+      "[1,     5] loss: 4.660061359405518\n",
+      "[1,     6] loss: 4.631757736206055\n",
+      "[1,     7] loss: 4.563920021057129\n",
+      "[1,     8] loss: 4.625548839569092\n",
+      "[1,     9] loss: 4.598842620849609\n",
+      "[1,    10] loss: 4.6224799156188965\n",
+      "[1,    11] loss: 4.568737030029297\n",
+      "[1,    12] loss: 4.60933780670166\n",
+      "[1,    13] loss: 4.616479396820068\n",
+      "[1,    14] loss: 4.600872039794922\n",
+      "[1,    15] loss: 4.683802127838135\n",
+      "[1,    16] loss: 4.674005031585693\n",
+      "[1,    17] loss: 4.6639790534973145\n",
+      "[1,    18] loss: 4.651022911071777\n",
+      "[1,    19] loss: 4.555922031402588\n",
+      "[1,    20] loss: 4.663208961486816\n",
+      "[1,    21] loss: 4.632880210876465\n",
+      "[1,    22] loss: 4.5813889503479\n",
+      "[1,    23] loss: 4.638350963592529\n",
+      "[1,    24] loss: 4.665174961090088\n",
+      "[1,    25] loss: 4.603099822998047\n",
+      "[1,    26] loss: 4.637110710144043\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[196], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(epoch):\n\u001b[1;32m      4\u001b[0m     running_loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m----> 5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j, data \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(trainingLoader, \u001b[38;5;241m0\u001b[39m):\n\u001b[1;32m      6\u001b[0m         inputs, labels \u001b[38;5;241m=\u001b[39m data\n\u001b[1;32m      7\u001b[0m         optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/torch/utils/data/dataloader.py:631\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    628\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sampler_iter \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    629\u001b[0m     \u001b[38;5;66;03m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    630\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reset()  \u001b[38;5;66;03m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 631\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_next_data()\n\u001b[1;32m    632\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    633\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataset_kind \u001b[38;5;241m==\u001b[39m _DatasetKind\u001b[38;5;241m.\u001b[39mIterable \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[1;32m    634\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[1;32m    635\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called:\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/torch/utils/data/dataloader.py:675\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    673\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_next_data\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    674\u001b[0m     index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_next_index()  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m--> 675\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataset_fetcher\u001b[38;5;241m.\u001b[39mfetch(index)  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m    676\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory:\n\u001b[1;32m    677\u001b[0m         data \u001b[38;5;241m=\u001b[39m _utils\u001b[38;5;241m.\u001b[39mpin_memory\u001b[38;5;241m.\u001b[39mpin_memory(data, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory_device)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/torch/utils/data/_utils/fetch.py:51\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[0;34m(self, possibly_batched_index)\u001b[0m\n\u001b[1;32m     49\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset\u001b[38;5;241m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[1;32m     50\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 51\u001b[0m         data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[idx] \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[possibly_batched_index]\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/torch/utils/data/_utils/fetch.py:51\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     49\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset\u001b[38;5;241m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[1;32m     50\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 51\u001b[0m         data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[idx] \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[possibly_batched_index]\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/torchvision/datasets/flowers102.py:81\u001b[0m, in \u001b[0;36mFlowers102.__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, idx: \u001b[38;5;28mint\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tuple[Any, Any]:\n\u001b[1;32m     80\u001b[0m     image_file, label \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_image_files[idx], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_labels[idx]\n\u001b[0;32m---> 81\u001b[0m     image \u001b[38;5;241m=\u001b[39m PIL\u001b[38;5;241m.\u001b[39mImage\u001b[38;5;241m.\u001b[39mopen(image_file)\u001b[38;5;241m.\u001b[39mconvert(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRGB\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     83\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransform:\n\u001b[1;32m     84\u001b[0m         image \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransform(image)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/PIL/Image.py:937\u001b[0m, in \u001b[0;36mImage.convert\u001b[0;34m(self, mode, matrix, dither, palette, colors)\u001b[0m\n\u001b[1;32m    889\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mconvert\u001b[39m(\n\u001b[1;32m    890\u001b[0m     \u001b[38;5;28mself\u001b[39m, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, matrix\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, dither\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, palette\u001b[38;5;241m=\u001b[39mPalette\u001b[38;5;241m.\u001b[39mWEB, colors\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m256\u001b[39m\n\u001b[1;32m    891\u001b[0m ):\n\u001b[1;32m    892\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    893\u001b[0m \u001b[38;5;124;03m    Returns a converted copy of this image. For the \"P\" mode, this\u001b[39;00m\n\u001b[1;32m    894\u001b[0m \u001b[38;5;124;03m    method translates pixels through the palette.  If mode is\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    934\u001b[0m \u001b[38;5;124;03m    :returns: An :py:class:`~PIL.Image.Image` object.\u001b[39;00m\n\u001b[1;32m    935\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 937\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mload()\n\u001b[1;32m    939\u001b[0m     has_transparency \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minfo\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtransparency\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    940\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m mode \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mP\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    941\u001b[0m         \u001b[38;5;66;03m# determine default mode\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/PIL/ImageFile.py:269\u001b[0m, in \u001b[0;36mImageFile.load\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    266\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m(msg)\n\u001b[1;32m    268\u001b[0m b \u001b[38;5;241m=\u001b[39m b \u001b[38;5;241m+\u001b[39m s\n\u001b[0;32m--> 269\u001b[0m n, err_code \u001b[38;5;241m=\u001b[39m decoder\u001b[38;5;241m.\u001b[39mdecode(b)\n\u001b[1;32m    270\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    271\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "def training(dataloader, network, loss_fn, optimizer):\n",
-    "    size = len(dataloader.dataset)\n",
-    "    network.train()\n",
-    "    for batch, (X, y) in enumerate(dataloader):\n",
+    "epoch = 5\n",
     "\n",
-    "        # Compute prediction error\n",
-    "        pred = network(X)\n",
-    "        loss = loss_fn(pred, y)\n",
-    "\n",
-    "        # Backpropagation\n",
+    "for i in range(epoch):\n",
+    "    running_loss = 0\n",
+    "    for j, data in enumerate(trainingLoader, 0):\n",
+    "        inputs, labels = data\n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        outputs = network(inputs)\n",
+    "        loss = loss_fn(outputs, labels)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        running_loss += loss.item()\n",
+    "        \n",
+    "        print(f'[{i + 1}, {j + 1:5d}] loss: {running_loss}')\n",
+    "        running_loss = 0\n",
     "\n",
-    "        if batch % 100 == 0:\n",
-    "            loss, current = loss.item(), (batch + 1) * len(X)\n",
-    "            print(f\"loss: {loss:>7f}  [{current:>5d}/{size:>5d}]\")"
+    "print('Finished Training')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "b5bcf353",
+   "execution_count": 172,
+   "id": "4c43bbce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Network accuracy = 0.601723857537811%\n"
+     ]
+    }
+   ],
    "source": [
-    "def testing(dataloader, network, loss_fn):\n",
-    "    size = len(dataloader.dataset)\n",
-    "    num_batches = len(dataloader)\n",
-    "    network.eval()\n",
-    "    test_loss, correct = 0, 0\n",
-    "    with torch.no_grad():\n",
-    "        for X, y in dataloader:\n",
-    "            pred = network(X)\n",
-    "            test_loss += loss_fn(pred, y).item()\n",
-    "            correct += (pred.argmax(1) == y).type(torch.float).sum().item()\n",
-    "    test_loss /= num_batches\n",
-    "    correct /= size\n",
-    "    print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {test_loss:>8f} \\n\")"
+    "correct = 0\n",
+    "total = 0\n",
+    "\n",
+    "for data in testingLoader:\n",
+    "    images, labels = data\n",
+    "    output = network(images)\n",
+    "    _, predicted = torch.max(output.data, 1)\n",
+    "    total += labels.size(0)\n",
+    "    correct += (predicted == labels).sum().item()\n",
+    "    \n",
+    "print(f\"Network accuracy = {100 * correct / total}%\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c43bbce",
+   "id": "18e965ff",
    "metadata": {},
    "outputs": [],
    "source": []
