Double digit accuracy
Managed to get to 10% accuracy. Its an improvement, even if it is only a small improvement.

--- a/Assessment Code.ipynb
+++ b/Assessment Code.ipynb
@@ -113,12 +113,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "id": "c663b7a5",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1,    50] loss: 2.498\n",
+      "[2,    50] loss: 2.339\n",
+      "[3,    50] loss: 2.123\n",
+      "[4,    50] loss: 1.915\n",
+      "[5,    50] loss: 1.713\n",
+      "[6,    50] loss: 1.518\n",
+      "[7,    50] loss: 1.339\n",
+      "[8,    50] loss: 1.164\n",
+      "[9,    50] loss: 1.005\n",
+      "[10,    50] loss: 0.864\n",
+      "[11,    50] loss: 0.750\n",
+      "[12,    50] loss: 0.617\n",
+      "[13,    50] loss: 0.489\n",
+      "[14,    50] loss: 0.407\n",
+      "[15,    50] loss: 0.317\n",
+      "[16,    50] loss: 0.252\n",
+      "[17,    50] loss: 0.195\n",
+      "[18,    50] loss: 0.391\n",
+      "[19,    50] loss: 0.360\n",
+      "[20,    50] loss: 0.169\n",
+      "[21,    50] loss: 0.106\n",
+      "[22,    50] loss: 0.082\n",
+      "[23,    50] loss: 0.073\n",
+      "[24,    50] loss: 0.060\n",
+      "[25,    50] loss: 0.052\n",
+      "[26,    50] loss: 0.046\n",
+      "[27,    50] loss: 0.041\n",
+      "[28,    50] loss: 0.038\n",
+      "[29,    50] loss: 0.035\n",
+      "[30,    50] loss: 0.033\n",
+      "[31,    50] loss: 0.031\n",
+      "[32,    50] loss: 0.029\n",
+      "[33,    50] loss: 0.027\n",
+      "[34,    50] loss: 0.025\n",
+      "[35,    50] loss: 0.024\n",
+      "[36,    50] loss: 0.022\n",
+      "[37,    50] loss: 0.021\n",
+      "[38,    50] loss: 0.020\n",
+      "[39,    50] loss: 0.019\n",
+      "[40,    50] loss: 0.019\n",
+      "[41,    50] loss: 0.018\n",
+      "[42,    50] loss: 0.018\n",
+      "[43,    50] loss: 0.018\n",
+      "[44,    50] loss: 0.017\n",
+      "[45,    50] loss: 0.016\n",
+      "[46,    50] loss: 0.016\n",
+      "[47,    50] loss: 0.015\n",
+      "[48,    50] loss: 0.014\n",
+      "[49,    50] loss: 0.014\n",
+      "[50,    50] loss: 0.013\n",
+      "Finished Training\n"
+     ]
+    }
+   ],
    "source": [
     "epoch = 50\n",
     "\n",
@@ -144,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 221,
    "id": "4c43bbce",
    "metadata": {},
    "outputs": [
@@ -152,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Network accuracy = 1.1383964872336965%\n"
+      "Network accuracy = 10.928606277443487%\n"
      ]
     }
    ],
@@ -167,13 +225,13 @@
     "    total += labels.size(0)\n",
     "    correct += (predicted == labels).sum().item()\n",
     "    \n",
-    "print(f\"Network accuracy = {100 * correct / total}%\")"
+    "print(f\"Network accuracy = {100 * (correct / total)}%\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f736fc66",
+   "id": "473ba965",
    "metadata": {},
    "outputs": [],
    "source": []
