--- a/Assessment Code.ipynb
+++ b/Assessment Code.ipynb
@@ -41,18 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 273,
    "id": "06cb2ec2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainingLoader = DataLoader(training_data, batch_size=16)\n",
-    "testingLoader = DataLoader(testing_data, batch_size=16)"
+    "trainingLoader = DataLoader(training_data, batch_size=8, shuffle = True)\n",
+    "testingLoader = DataLoader(testing_data, batch_size=8, shuffle = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 274,
    "id": "45cea85d",
    "metadata": {},
    "outputs": [],
@@ -61,22 +61,22 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.layer1 = nn.Sequential(\n",
-    "            nn.Conv2d(3,18,5),\n",
-    "            nn.BatchNorm2d(18),\n",
+    "            nn.Conv2d(3,24,5),\n",
+    "            nn.BatchNorm2d(24),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(3,3)\n",
     "        )\n",
     "        self.layer2 = nn.Sequential(\n",
-    "            nn.Conv2d(18, 48,5),\n",
-    "            nn.BatchNorm2d(48),\n",
+    "            nn.Conv2d(24, 72,5),\n",
+    "            nn.BatchNorm2d(72),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(3,3)\n",
     "        )\n",
-    "        self.fc1 = nn.Linear(6912,2000)\n",
+    "        self.fc1 = nn.Linear(10368,5000)\n",
     "        self.relu1 = nn.ReLU()\n",
-    "        self.fc2 = nn.Linear(2000,500)\n",
+    "        self.fc2 = nn.Linear(5000,1000)\n",
     "        self.relu2 = nn.ReLU()\n",
-    "        self.fc3 = nn.Linear(500,102)\n",
+    "        self.fc3 = nn.Linear(1000,102)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.layer1(x)\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 275,
    "id": "74cd3fb2",
    "metadata": {},
    "outputs": [],
@@ -102,18 +102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 276,
    "id": "59816a54",
    "metadata": {},
    "outputs": [],
    "source": [
     "loss_fn = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.SGD(network.parameters(), lr = 0.01)"
+    "optimizer = torch.optim.SGD(network.parameters(), lr = 0.005)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 277,
    "id": "c663b7a5",
    "metadata": {
     "scrolled": true
@@ -123,62 +123,112 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1,    50] loss: 2.498\n",
-      "[2,    50] loss: 2.339\n",
-      "[3,    50] loss: 2.123\n",
-      "[4,    50] loss: 1.915\n",
-      "[5,    50] loss: 1.713\n",
-      "[6,    50] loss: 1.518\n",
-      "[7,    50] loss: 1.339\n",
-      "[8,    50] loss: 1.164\n",
-      "[9,    50] loss: 1.005\n",
-      "[10,    50] loss: 0.864\n",
-      "[11,    50] loss: 0.750\n",
-      "[12,    50] loss: 0.617\n",
-      "[13,    50] loss: 0.489\n",
-      "[14,    50] loss: 0.407\n",
-      "[15,    50] loss: 0.317\n",
-      "[16,    50] loss: 0.252\n",
-      "[17,    50] loss: 0.195\n",
-      "[18,    50] loss: 0.391\n",
-      "[19,    50] loss: 0.360\n",
-      "[20,    50] loss: 0.169\n",
-      "[21,    50] loss: 0.106\n",
-      "[22,    50] loss: 0.082\n",
-      "[23,    50] loss: 0.073\n",
-      "[24,    50] loss: 0.060\n",
-      "[25,    50] loss: 0.052\n",
-      "[26,    50] loss: 0.046\n",
-      "[27,    50] loss: 0.041\n",
-      "[28,    50] loss: 0.038\n",
-      "[29,    50] loss: 0.035\n",
-      "[30,    50] loss: 0.033\n",
-      "[31,    50] loss: 0.031\n",
-      "[32,    50] loss: 0.029\n",
-      "[33,    50] loss: 0.027\n",
-      "[34,    50] loss: 0.025\n",
-      "[35,    50] loss: 0.024\n",
-      "[36,    50] loss: 0.022\n",
-      "[37,    50] loss: 0.021\n",
-      "[38,    50] loss: 0.020\n",
-      "[39,    50] loss: 0.019\n",
-      "[40,    50] loss: 0.019\n",
-      "[41,    50] loss: 0.018\n",
-      "[42,    50] loss: 0.018\n",
-      "[43,    50] loss: 0.018\n",
-      "[44,    50] loss: 0.017\n",
-      "[45,    50] loss: 0.016\n",
-      "[46,    50] loss: 0.016\n",
-      "[47,    50] loss: 0.015\n",
-      "[48,    50] loss: 0.014\n",
-      "[49,    50] loss: 0.014\n",
-      "[50,    50] loss: 0.013\n",
+      "[1,   100] loss: 4.62382\n",
+      "[2,   100] loss: 4.33543\n",
+      "[3,   100] loss: 3.96846\n",
+      "[4,   100] loss: 3.58053\n",
+      "[5,   100] loss: 3.17695\n",
+      "[6,   100] loss: 2.75202\n",
+      "[7,   100] loss: 2.31670\n",
+      "[8,   100] loss: 1.93557\n",
+      "[9,   100] loss: 1.57628\n",
+      "[10,   100] loss: 1.15128\n",
+      "[11,   100] loss: 0.83500\n",
+      "[12,   100] loss: 0.54071\n",
+      "[13,   100] loss: 0.34326\n",
+      "[14,   100] loss: 0.22295\n",
+      "[15,   100] loss: 0.15757\n",
+      "[16,   100] loss: 0.11124\n",
+      "[17,   100] loss: 0.08455\n",
+      "[18,   100] loss: 0.07093\n",
+      "[19,   100] loss: 0.05648\n",
+      "[20,   100] loss: 0.05069\n",
+      "[21,   100] loss: 0.04474\n",
+      "[22,   100] loss: 0.03671\n",
+      "[23,   100] loss: 0.03221\n",
+      "[24,   100] loss: 0.02798\n",
+      "[25,   100] loss: 0.02407\n",
+      "[26,   100] loss: 0.02425\n",
+      "[27,   100] loss: 0.02220\n",
+      "[28,   100] loss: 0.02037\n",
+      "[29,   100] loss: 0.01785\n",
+      "[30,   100] loss: 0.01635\n",
+      "[31,   100] loss: 0.01647\n",
+      "[32,   100] loss: 0.01484\n",
+      "[33,   100] loss: 0.01513\n",
+      "[34,   100] loss: 0.01384\n",
+      "[35,   100] loss: 0.01398\n",
+      "[36,   100] loss: 0.01217\n",
+      "[37,   100] loss: 0.01295\n",
+      "[38,   100] loss: 0.01088\n",
+      "[39,   100] loss: 0.01098\n",
+      "[40,   100] loss: 0.00993\n",
+      "[41,   100] loss: 0.01057\n",
+      "[42,   100] loss: 0.00979\n",
+      "[43,   100] loss: 0.00898\n",
+      "[44,   100] loss: 0.00884\n",
+      "[45,   100] loss: 0.00844\n",
+      "[46,   100] loss: 0.00823\n",
+      "[47,   100] loss: 0.00791\n",
+      "[48,   100] loss: 0.00782\n",
+      "[49,   100] loss: 0.00747\n",
+      "[50,   100] loss: 0.00715\n",
+      "[51,   100] loss: 0.00726\n",
+      "[52,   100] loss: 0.00657\n",
+      "[53,   100] loss: 0.00672\n",
+      "[54,   100] loss: 0.00663\n",
+      "[55,   100] loss: 0.00592\n",
+      "[56,   100] loss: 0.00640\n",
+      "[57,   100] loss: 0.00584\n",
+      "[58,   100] loss: 0.00554\n",
+      "[59,   100] loss: 0.00557\n",
+      "[60,   100] loss: 0.00589\n",
+      "[61,   100] loss: 0.00535\n",
+      "[62,   100] loss: 0.00558\n",
+      "[63,   100] loss: 0.00555\n",
+      "[64,   100] loss: 0.00512\n",
+      "[65,   100] loss: 0.00495\n",
+      "[66,   100] loss: 0.00465\n",
+      "[67,   100] loss: 0.00476\n",
+      "[68,   100] loss: 0.00431\n",
+      "[69,   100] loss: 0.00456\n",
+      "[70,   100] loss: 0.00448\n",
+      "[71,   100] loss: 0.00447\n",
+      "[72,   100] loss: 0.00454\n",
+      "[73,   100] loss: 0.00430\n",
+      "[74,   100] loss: 0.00412\n",
+      "[75,   100] loss: 0.00411\n",
+      "[76,   100] loss: 0.00433\n",
+      "[77,   100] loss: 0.00379\n",
+      "[78,   100] loss: 0.00404\n",
+      "[79,   100] loss: 0.00379\n",
+      "[80,   100] loss: 0.00368\n",
+      "[81,   100] loss: 0.00386\n",
+      "[82,   100] loss: 0.00362\n",
+      "[83,   100] loss: 0.00354\n",
+      "[84,   100] loss: 0.00344\n",
+      "[85,   100] loss: 0.00342\n",
+      "[86,   100] loss: 0.00348\n",
+      "[87,   100] loss: 0.00340\n",
+      "[88,   100] loss: 0.00324\n",
+      "[89,   100] loss: 0.00321\n",
+      "[90,   100] loss: 0.00307\n",
+      "[91,   100] loss: 0.00325\n",
+      "[92,   100] loss: 0.00302\n",
+      "[93,   100] loss: 0.00292\n",
+      "[94,   100] loss: 0.00314\n",
+      "[95,   100] loss: 0.00292\n",
+      "[96,   100] loss: 0.00294\n",
+      "[97,   100] loss: 0.00290\n",
+      "[98,   100] loss: 0.00311\n",
+      "[99,   100] loss: 0.00274\n",
+      "[100,   100] loss: 0.00277\n",
       "Finished Training\n"
      ]
     }
    ],
    "source": [
-    "epoch = 50\n",
+    "epoch = 100\n",
     "\n",
     "for i in range(epoch):\n",
     "    running_loss = 0\n",
@@ -193,8 +243,8 @@
     "        \n",
     "        running_loss += loss.item()\n",
     "        \n",
-    "        if j % 50 == 49:\n",
-    "            print(f'[{i + 1}, {j + 1:5d}] loss: {running_loss/50:.3f}')\n",
+    "        if j % 100 == 99:\n",
+    "            print(f'[{i + 1}, {j + 1:5d}] loss: {running_loss/100:.5f}')\n",
     "            running_loss = 0\n",
     "\n",
     "print('Finished Training')"
@@ -202,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 278,
    "id": "4c43bbce",
    "metadata": {},
    "outputs": [
@@ -210,7 +260,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Network accuracy = 10.928606277443487%\n"
+      "Network accuracy = 25.223613595706617%\n"
      ]
     }
    ],
@@ -231,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "473ba965",
+   "id": "32720d7d",
    "metadata": {},
    "outputs": [],
    "source": []
